PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.3.25

- Core:
  . Fixed bug #80280 (ADD_EXTENSION_DEP() fails for ext/standard and ext/date).
    (cmb)
  . Fixed bug #80258 (Windows Deduplication Enabled, randon permission errors).
    (cmb)

- IMAP:
  . Fixed bug #64076 (imap_sort() does not return FALSE on failure). (cmb)
  . Fixed bug #76618 (segfault on imap_reopen). (girgias)
  . Fixed bug #80239 (imap_rfc822_write_address() leaks memory). (cmb)
  . Fixed minor regression caused by fixing bug #80220. (cmb)
  . Fixed bug #80242 (imap_mail_compose() segfaults for multipart with rfc822).
    (cmb)

29 Oct 2020, PHP 7.3.24

- Core:
  . Fixed bug #79423 (copy command is limited to size of file it can copy).
    (cmb)

- Calendar:
  . Fixed bug #80185 (jdtounix() fails after 2037). (cmb)

- IMAP:
  . Fixed bug #80213 (imap_mail_compose() segfaults on certain $bodies). (cmb)
  . Fixed bug #80215 (imap_mail_compose() may modify by-val parameters). (cmb)
  . Fixed bug #80220 (imap_mail_compose() may leak memory). (cmb)
  . Fixed bug #80223 (imap_mail_compose() leaks envelope on malformed bodies).
    (cmb)
  . Fixed bug #80216 (imap_mail_compose() does not validate types/encodings).
    (cmb)
  . Fixed bug #80226 (imap_sort() leaks sortpgm memory). (cmb)

- MySQLnd:
  . Fixed bug #80115 (mysqlnd.debug doesn't recognize absolute paths with
    slashes). (cmb)
  . Fixed bug #80107 (mysqli_query() fails for ~16 MB long query when
    compression is enabled). (Nikita)

- ODBC:
  . Fixed bug #78470 (odbc_specialcolumns() no longer accepts $nullable). (cmb)
  . Fixed bug #80147 (BINARY strings may not be properly zero-terminated).
    (cmb)
  . Fixed bug #80150 (Failure to fetch error message). (cmb)
  . Fixed bug #80152 (odbc_execute() moves internal pointer of $params). (cmb)